<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDataActivity">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EventDataActivity">


    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEventName"
        />
    <EditText
        android:id="@+id/etPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlace"/>
    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvPriority"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlace"
        />
    <RadioGroup
        android:id="@+id/rgPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/tvPriority"
        app:layout_constraintTop_toBottomOf="@+id/tvPriority">
        <RadioButton
            android:id="@+id/rbLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbLow"/>

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbNormal"/>

        <RadioButton
            android:id="@+id/rbHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbHigh"/>



    </RadioGroup>
    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDateTime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgPriority"/>
    <DatePicker
        android:id="@+id/dpDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:datePickerMode="spinner"
        app:layout_constraintStart_toStartOf="@id/tvDateTime"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TimePicker
        android:id="@+id/tpTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/dpDate"
        app:layout_constraintTop_toBottomOf="@+id/dpDate"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btAceptar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btCancel"
        app:layout_constraintStart_toStartOf="@+id/tpTime"
        app:layout_constraintTop_toBottomOf="@+id/tpTime"
        />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btCancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAceptar"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




